<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fi.helsinki.sauna_app.app.Status"
    android:weightSum="1">

    <TextView
        style="@style/TextViewStyle"
        android:id="@+id/temperature"
        android:text="@string/temperature_not_measured" />

    <TextView
        style="@style/TextViewStyle"
        android:id="@+id/humidity"
        android:layout_below="@id/temperature"
        android:text="@string/humidity_not_measured" />

    <TextView
        style="@style/TextViewStyle"
        android:id="@+id/co"
        android:layout_below="@id/humidity"
        android:text="@string/co_not_measured" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/co"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/update_btn"
            android:onClick="measure"
            android:text="@string/update_button" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/set_button" />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/start_button" />

    </LinearLayout>



</RelativeLayout>