<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fi.helsinki.sauna_app.app.activity.StatusActivity" >


    <item android:id="@+id/action_status"
        android:title="@string/action_status"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_user_profile"
        android:title="@string/action_user_profile"
        android:orderInCategory="101"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item android:id="@+id/action_quit"
        android:title="@string/action_quit"
        android:orderInCategory="103"
        app:showAsAction="never" />
</menu>
